src/app/modules/poducts/productfilters/productfilters.component.scss
.filter {
    .dropdown-toggle::after {
      position: absolute;
      right: 15px;
      top: 39%;
    }
  
    .btn-filter {
      height: 69px;
      border-radius: 5px;
      border: solid 1px #e2e2e2;
      background-color: #ffffff;
      opacity: 0.8;
      font-family: VAGRounded;
      font-size: 23px;
      font-weight: 300;
      text-align: left;
      letter-spacing: 0.92px;
      color: rgba(28, 28, 28, 0.5);
    }
    .clear-filter,.more-filter {
      font-family: VAGRounded;
      font-size: 18px;
      font-weight: 300;
      letter-spacing: 0.72px;
      text-align: left;
      color: #41c2c2!important;
    }
  }

